--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,12 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Dropzone (drag & drop documents) -->
+    <link
+        rel="stylesheet"
+        href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css"
+    />
+
     <!-- STYLE GLOBAL CRM -->
     <link rel="stylesheet" href="{{ url_for('static', filename='design.css') }}">
 </head>
@@ -159,6 +165,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
+<!-- Dropzone -->
+<script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
+
 <script>
 (function () {
 
@@ -187,7 +196,7 @@
 
     closeBtn?.addEventListener('click', () => widget.classList.remove('open'));
 
-    function loadChat(reset = false) {
+    function loadChat() {
         fetch('/chat/messages?limit=120')
             .then(r => r.json())
             .then(data => {
